# hat-game

./: .gitattributes  .gitignore  HOWTO.md  Makefile  README.md  build.yaml  deploy_web.sh  firebase.json  gen_index_html.sh  init_repo.sh  plan.md  pubspec.yaml  pyproject.toml  translations_blacklist  update_git_version.sh
hatgame/: .firebaserc  .gitignore  HOWTO.md  analysis_options.yaml  deploy_web.sh  firebase.json  init_repo.sh  pubspec.yaml  translations_blacklist
lexicon/: russian_easy.txt  russian_easy.yaml  russian_hard.txt  russian_hard.yaml  russian_medium.txt  russian_medium.yaml
lib/: about_screen.dart  app_version.dart  assertion.dart  colors.dart  config_view.dart  db_columns.dart  db_constants.dart  dictionary_selector.dart  enum_option_selector.dart  game_config.dart  game_config_controller.dart  game_config_view.dart  game_controller.dart  game_data.dart  game_navigator.dart  game_phase.dart  game_phase_reader.dart  game_settings.dart  game_state.dart  game_view.dart  git_version.tmpl  kicked_screen.dart  lexicon.dart  local_config.dart  local_storage.dart  main.dart  multi_line_radio_list_tile.dart  numeric_field.dart  offline_player_config_view.dart  online_player_config_view.dart  padlock.dart  partying_strategy.dart  player_config_view.dart  rules_config_view.dart  rules_screen.dart  score_view.dart  sounds.dart  start_game_online_screen.dart  start_screen.dart  team_compositions_view.dart  (+6 more)
test/: game_controller_test.dart  partying_strategy_test.dart  teaming_strategy_test.dart  widget_test.dart
tools/: format_lexicon.py  gen_random.py  (+4 more)
(+226 files in other folders)
