[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hat-game-python-tools"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "nltk>=3.8",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pymorphy3>=1.0.0",
    "termcolor>=2.0.0",
    "tqdm>=4.65.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
